# idss-seriation-v2

./: .bandit  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
doc/: Makefile  aws_ray_cluster.rst  conf.py  configuration.rst  executables.rst  index.rst  input_formats.rst  minmax_graphs.rst  seriation_types.rst  statistics.rst  statistics_utilites.rst  sumgraphs.rst  timeutils.rst
docker/: Dockerfile  compose.yaml
idss_seriation/: __init__.py
test/: conftest.py
