[metadata]
description-file = README.md

[aliases]
test = pytest

[flake8]
# line-length warning; we let black format things
ignore = E501, W503
exclude =
    .git,
    # exclude init.py because it often imports things in order to export them
    __init__.py,
    docs,
    build,
    dist

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
addopts = --cov=idss_seriation --cov-report html